# zx-spectrum-diagnostics

./: .gitignore  README.md  notebook.txt
firmware/firmware-common/: link_common.h  page.h  test_data.h
firmware/pico1/: CMakeLists.txt  clk_counter.pio  font.c  font.h  gpios.h  oled.c  oled.h  page.h  page_abus.c  page_abus.h  page_dbus.c  page_dbus.h  page_rom.c  page_rom.h  page_ula.c  page_ula.h  page_voltages.c  page_voltages.h  page_z80.c  page_z80.h  sh1106.c  sh1106.h  zx_diagnostics_pico1.c
firmware/pico2/: CMakeLists.txt  gpios.h  zx_diagnostics_pico2.c
pcb/: connections.kicad_sch  errata.txt  fp-lib-table  sym-lib-table  zx-spectrum-diagnostics.kicad_pcb  zx-spectrum-diagnostics.kicad_prl  zx-spectrum-diagnostics.kicad_pro  zx-spectrum-diagnostics.kicad_sch
pcb/fab1.0/: zx-spectrum-diagnostics-B_Cu.gbl  zx-spectrum-diagnostics-B_Mask.gbs  zx-spectrum-diagnostics-B_Paste.gbp  zx-spectrum-diagnostics-B_Silkscreen.gbo  zx-spectrum-diagnostics-Edge_Cuts.gm1  zx-spectrum-diagnostics-F_Cu.gtl  zx-spectrum-diagnostics-F_Mask.gts  zx-spectrum-diagnostics-F_Paste.gtp  zx-spectrum-diagnostics-F_Silkscreen.gto  zx-spectrum-diagnostics-NPTH-drl_map.gbr  zx-spectrum-diagnostics-NPTH.drl  zx-spectrum-diagnostics-PTH-drl_map.gbr  zx-spectrum-diagnostics-PTH.drl  zx-spectrum-diagnostics-job.gbrjob
pcb/fab1.1/: zx-spectrum-diagnostics-B_Cu.gbl  zx-spectrum-diagnostics-B_Mask.gbs  zx-spectrum-diagnostics-B_Paste.gbp  zx-spectrum-diagnostics-B_Silkscreen.gbo  zx-spectrum-diagnostics-Edge_Cuts.gm1  (+8 more)
pcb_pga2040/: connections.kicad_sch  errata.txt  fp-lib-table  pga2040.kicad_sym  sym-lib-table  zx-spectrum-diagnostics.kicad_pcb  zx-spectrum-diagnostics.kicad_sch
uf2/: pico1.uf2  pico2.uf2
(+16 files in other folders)
